k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plandera-webpage-production
  labels:
    name: plandera-webpage-production
    environment: production
